...
    <!-- This preference does not set Focus as the default browser but instead links to Android's
     "default apps" settings screen or if not supported by this Android version to a SUMO page describing
     how to set Focus as a default browser.
      %1$s will be replaced by the app name (e.g. Firefox Focus) -->
    <string name="preference_default_browser2">Make %1$s default browser</string>

    <string name="preference_category_mozilla">Mozilla</string>
    <string name="preference_mozilla_telemetry2">Send usage data</string>

    <!-- A link to SUMO at the end of the summary (preference_mozilla_telemetry_summary2) of the "Send anonymous usage data" setting. -->
    <string name="preference_mozilla_telemetry_summary">Learn more</string>

    <!-- %1$s will be replaced with the name of the app (e.g. Firefox Focus) -->
    <string name="preference_mozilla_telemetry_summary2">Mozilla strives to collect only what we need to provide and improve %1$s for everyone.</string>

    <!-- In-app link (in settings) to Focus privacy notice. -->
    <string name="preference_privacy_notice">Privacy Notice</string>

    <!-- Item in Preferences that shows the about page. Parameter 1 is the app name, i.e. Firefox Focus/Firefox Klar. -->
    <string name="preference_about">About %1$s</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_search_installed_search_engines">Installed search engines</string>

    <!-- Header for the list of installed search engines -->
    <string name="preference_choose_search_engine">Choose search engine</string>
...
    <string name="content_description_trackers_blocked">Number of trackers blocked</string>

    <!-- Content description (not visible, for screen readers etc.): This is the description for the switch in the menu that temporarily disables/enables
         content blocking for the current session -->
    <string name="content_description_blocking_switch">Block trackers</string>

    <string name="your_rights">Your Rights</string>

    <string name="external_app_prompt_title">Open link in another app</string>
    <!-- This string is shown when the user has clicked a link that needs to be opened in a different app.
         Argument 2 is the external app name, argument 1 is our name (i.e. Firefox Focus, or Firefox Klar). -->
    <string name="external_app_prompt">You can leave %1$s to open this link in %2$s.</string>
    <!-- This text is the title of a dialog shown if no app could be found for a custom link protocol. -->
...
