...
    </android.support.constraint.ConstraintLayout>

    <!-- lint: We need to use singleLine=true for the fading edge to work (which is officially deprecated,
         but still needed), hence we ignore deprecated warnings here.. -->
    <TextView
        tools:ignore="Deprecated"
        android:id="@+id/display_url"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:ellipsize="none"
        android:requiresFadingEdge="horizontal"
...
